--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,9 +5,9 @@
   </small>
   <nav>
     <ul>
-      <li><%= link_to "About",   static_pages_About_path %></li>
-      <li><%= link_to "Contact", static_pages_Contact_path %></li>
-      <li><%= link_to "Help", static_pages_help_path %></li>
+      <li><%= link_to "About", static_pages_about_path %></li>
+	  
+      <li><%= link_to "Contact", static_pages_contact_path %></li>
       <li><a href="http://news.railstutorial.org/">News</a></li>
     </ul>
   </nav>
