--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,9 +4,9 @@
       <%= link_to "sample app", '#', id: "logo" %>
       <nav>
         <ul class="nav pull-right">
-          <li><%= link_to "Home",    '#' %></li>
-          <li><%= link_to "Help",    '#' %></li>
-          <li><%= link_to "Sign in", '#' %></li>
+          <li><%= link_to "Home",    static_pages_home_path %></li>
+          <li><%= link_to "Help",    static_pages_help_path %></li>
+          <li><%= link_to "Sign in", signup_path %></li>
         </ul>
       </nav>
     </div>
