Add SSL in production

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,48 +12,48 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
-  </div>
-  <div class="field">
-    <%= f.label :uid %><br>
-    <%= f.text_field :uid %>
-  </div>
-  <div class="field">
-    <%= f.label :nick %><br>
-    <%= f.text_field :nick %>
+    <%= f.label :name %><br>
+    <%= f.text_field :name %>
   </div>
   <div class="field">
     <%= f.label :email %><br>
     <%= f.text_field :email %>
   </div>
   <div class="field">
+  
+  	<%= f.label :password %>
+	<%= f.password_field :password %>
+  </div>
+		
+  <div class="field">
+
+    <%= f.label :password_confirmation, "Confirmation" %>
+    <%= f.password_field :password_confirmation %>
+  </div>
+		
+  <div class="field">
     <%= f.label :desc %><br>
     <%= f.text_field :desc %>
   </div>
   <div class="field">
     <%= f.label :sex %><br>
-    <%= f.text_field :sex %>
+    <%= f.number_field :sex %>
   </div>
   <div class="field">
     <%= f.label :statue %><br>
     <%= f.number_field :statue %>
   </div>
   <div class="field">
-    <%= f.label :password %><br>
-    <%= f.text_field :password %>
-  </div>
-  <div class="field">
     <%= f.label :type %><br>
-    <%= f.text_field :type %>
+    <%= f.number_field :type %>
   </div>
   <div class="field">
-    <%= f.label :avatar %><br>
-    <%= f.text_field :avatar %>
+    <%= f.label :avtar %><br>
+    <%= f.text_field :avtar %>
   </div>
   <div class="field">
-    <%= f.label :vip_info %><br>
-    <%= f.text_field :vip_info %>
+    <%= f.label :info %><br>
+    <%= f.text_field :info %>
   </div>
   <div class="actions">
     <%= f.submit %>
